Updates adapter base url generates swagger documentation
